<resources>
    <string name="app_name">it19177106</string>
    <string name="name2">Name</string>
    <string name="select3">Select</string>
    <string name="add1">ADD</string>
    <string name="add_new_food">ADD NEW FOOD</string>
    <string name="todo1">TODO</string>
    <string name="name1">Name</string>
    <string name="add_new_category">ADD NEW CATEGORY</string>
    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="todo2">TODO</string>
    <string name="add">ADD</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="this_spicy_chicken_sandwich_is_a_slow_food_version_of_a_fast_food_favorite_complete_with_creamy">This spicy chicken sandwich is a slow-food version of a fast food favorite, complete with creamy</string>
    <string name="price_rs_350">Price : Rs.350</string>
    <string name="todo5">TODO</string>
    <string name="burger1">Burger</string>
    <string name="chees_burger">Chees Burger</string>
    <string name="spicy_chicken_burger">Spicy Chicken Burger</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="dessert">Dessert</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="todo0">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo33">TODO</string>
    <string name="Pizza">Pizza</string>
    <string name="menu">Menu</string>
    <string name="todo19">TODO</string>
    <string name="namee">Name *</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="name3">Name</string>
    <string name="select1">Select</string>
    <string name="add3">ADD</string>
    <string name="todo">TODO</string>
    <string name="discription">Discription:</string>
    <string name="name4">Name:</string>
    <string name="price">Price:</string>
    <string name="delete_food">DELETE FOOD</string>
    <string name="are_you_sure_you_want_to_delete_food_item">Are you sure, You want to delete food item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>