<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4CEEAA6"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="405dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/todo"
        android:onClick="burger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bergerking" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="405dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="344dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pizza" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="405dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="552dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goodvegetablesoup" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="405dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="404dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fghjk" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="405dp"
        android:layout_height="30dp"
        android:alpha="0.9"
        android:background="#979595"
        android:text="@string/burger"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276"
        tools:text="                           Burger" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="405dp"
        android:layout_height="30dp"
        android:alpha="0.9"
        android:background="#979595"
        android:text="@string/Pizza"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485"
        tools:text="                           Pizza" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="405dp"
        android:layout_height="30dp"
        android:layout_marginTop="488dp"
        android:alpha="0.9"
        android:background="#979595"
        android:text="@string/salad"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="                            Salad" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="405dp"
        android:layout_height="30dp"
        android:layout_marginTop="636dp"
        android:alpha="0.9"
        android:background="#979595"
        android:text="@string/soup"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="                            Soup" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F6F0F0"
        android:contentDescription="@string/todo"
        android:tint="#171616"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/menu"
        android:textColor="#E53935"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Menu" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="292dp"
        android:layout_marginLeft="292dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.7"
        android:background="#FBF8F8"
        android:contentDescription="@string/todo"
        android:onClick="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/addd" />

    <SearchView
        android:layout_width="102dp"
        android:layout_height="68dp"
        android:layout_marginStart="312dp"
        android:layout_marginLeft="312dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>