<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4CEEAA6"
    tools:context=".foodDeatils">

    <TextView
        android:id="@+id/textView"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:text="@string/burger"
        android:textAllCaps="true"
        android:textColor="#43A047"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="394dp"
        android:layout_height="191dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/todo"
        android:onClick="description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bergerking" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:alpha="0.7"
        android:background="#1E88E5"
        android:text="@string/chees_burger"
        android:textColor="#FBFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="394dp"
        android:layout_height="191dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="312dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spicychicken" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="192dp"
        android:layout_height="40dp"
        android:alpha="0.7"
        android:background="#1E88E5"
        android:text="@string/spicy_chicken_burger"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="99dp"
        android:layout_height="102dp"
        android:layout_marginStart="288dp"
        android:layout_marginLeft="288dp"
        android:layout_marginBottom="72dp"
        android:background="#FBF7F7"
        android:onClick="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/addd" />

    <Button
        android:id="@+id/button6"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:onClick="delete"
        android:text="Delete Category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="140dp"
        android:onClick="update"
        android:text="Update Category details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>